Use currency formatting in the Unit Price.

--- a/src/package.config
+++ b/src/package.config
@@ -62,7 +62,7 @@
                   <column name="ScenarioID" dataType="Integer"/>
                   <column name="RegionID" displayName="Region" dataType="Integer" validationType="Datasheet" formula1="Sales_Region" allowDbNull="False"/>
                   <column name="UnitID" displayName="Unit" dataType="Integer" validationType="Datasheet" formula1="Sales_Unit" allowDbNull="False"/>
-                  <column name="UnitPrice" displayName="Price" dataType="Double" validationType="Decimal" validationCondition="GreaterEqual" formula1="0" allowDbNull="False"/>
+                  <column name="UnitPrice" displayName="Price" dataType="Double" validationType="Decimal" validationCondition="GreaterEqual" formula1="0" allowDbNull="False" format="C2"/>
                   <column name="MinUnitsSold" displayName="Min Units Sold" dataType="Integer" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="0" format="d" allowDbNull="False"/>
                   <column name="MaxUnitsSold" displayName="Max Units Sold" dataType="Integer" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="0" format="d" allowDbNull="False"/>
                   <column name="PercentIncrease" displayName="% Annual Sales Increase" dataType="Double" validationType="Decimal" validationCondition="Between" formula1="-100" formula2="100" isOptional="True" format="N2"/>                  
