New package config and related code for updated schema.

--- a/src/package.config
+++ b/src/package.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <package name="sample-sales" displayName="Sample Sales" version="1.0.0" configVersion="2.0000" url="https://github.com/ApexRMS/sample-sales">
+  <package name="sample-sales" displayName="Sample Sales SyncroSim Base Package" version="1.0.0" configVersion="2.0000" url="https://github.com/ApexRMS/sample-sales">
     <transformers>
       <transformer name="sample-sales" displayName="Sample Sales" isPrimary="True">
         <runtime>
@@ -24,11 +24,11 @@
               </datasheet>
             </datasheets>
           </datafeed>
-          <datafeed name="sample-sales:unit" displayName="Units" dataScope="Project">
+          <datafeed name="sample-sales:item" displayName="Items" dataScope="Project">
             <datasheets>
-              <datasheet name="Sales_Unit" displayName="Units" valueMember="UnitID" displayMember="Name">
+              <datasheet name="Sales_Item" displayName="Items" valueMember="ItemID" displayMember="Name">
                 <columns>
-                  <column name="UnitID" dataType="Integer" isPrimary="True"/>
+                  <column name="ItemID" dataType="Integer" isPrimary="True"/>
                   <column name="ProjectID" dataType="Integer"/>
                   <column name="Name" dataType="String"/>
                   <column name="Description" dataType="String"/>                  
@@ -36,21 +36,17 @@
               </datasheet>
             </datasheets>
           </datafeed>          
-          <datafeed name="sample-sales:run-control" displayName="Run Control" dataScope="Scenario">
+          <datafeed name="sample-sales:run-control" displayName="Forecast Settings" dataScope="Scenario">
             <datasheets>
               <datasheet name="Sales_RunControl" displayName="Run Control" isSingleRow="True">
                 <columns>
                   <column name="RunControlID" dataType="Integer" isPrimary="True"/>
                   <column name="ScenarioID" dataType="Integer"/>
-                  <column name="MinimumIteration" displayName="Minimum Iteration" dataType="Integer" defaultValue="1" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="1" format="d"/>
-                  <column name="MaximumIteration" displayName="Maximum Iteration" dataType="Integer" defaultValue="1" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="1" format="d"/>
                   <column name="MinimumTimestep" displayName="Start Year" dataType="Integer" defaultValue="0" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="0" format="d"/>
-                  <column name="MaximumTimestep" displayName="End Year" dataType="Integer" defaultValue="0" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="0" format="d"/>
+                  <column name="MaximumTimestep" displayName="End Year" dataType="Integer" defaultValue="0" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="0" format="d"/>                
+                  <column name="MinimumIteration" displayName="Minimum Iteration" dataType="Integer" defaultValue="1" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="1" format="d" isVisible="False"/>
+                  <column name="MaximumIteration" displayName="Number of Iterations" dataType="Integer" defaultValue="1" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="1" format="d"/>
                 </columns>
-                <validations>
-                  <validation validationType="LessEqual" columns="MinimumIteration|MaximumIteration"/>
-                  <validation validationType="LessEqual" columns="MinimumTimestep|MaximumTimestep"/>
-                </validations>
               </datasheet>
             </datasheets>
           </datafeed>
@@ -61,15 +57,15 @@
                   <column name="AnnualSalesID" dataType="Integer" isPrimary="True"/>
                   <column name="ScenarioID" dataType="Integer"/>
                   <column name="RegionID" displayName="Region" dataType="Integer" validationType="Datasheet" formula1="Sales_Region" allowDbNull="False"/>
-                  <column name="UnitID" displayName="Unit" dataType="Integer" validationType="Datasheet" formula1="Sales_Unit" allowDbNull="False"/>
-                  <column name="UnitPrice" displayName="Price" dataType="Double" validationType="Decimal" validationCondition="GreaterEqual" formula1="0" allowDbNull="False" format="C2"/>
-                  <column name="MinUnitsSold" displayName="Min Units Sold" dataType="Integer" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="0" format="d" allowDbNull="False"/>
-                  <column name="MaxUnitsSold" displayName="Max Units Sold" dataType="Integer" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="0" format="d" allowDbNull="False"/>
+                  <column name="ItemID" displayName="Item" dataType="Integer" validationType="Datasheet" formula1="Sales_Item" allowDbNull="False"/>
+                  <column name="ItemPrice" displayName="Price" dataType="Double" validationType="Decimal" validationCondition="GreaterEqual" formula1="0" allowDbNull="False" format="C2"/>
+                  <column name="CurMinUnitsSold" displayName="Current Min Units Sold" dataType="Integer" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="0" format="d" allowDbNull="False"/>
+                  <column name="CurMaxUnitsSold" displayName="Current Max Units Sold" dataType="Integer" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="0" format="d" allowDbNull="False"/>
                   <column name="PercentIncrease" displayName="% Annual Sales Increase" dataType="Double" validationType="Decimal" validationCondition="Between" formula1="-100" formula2="100" isOptional="True" format="N2"/>                  
                 </columns>
                 <validations>
-                  <validation validationType="Unique" columns="RegionID|UnitID"/>                  
-                  <validation validationType="LessEqual" columns="MinUnitsSold|MaxUnitsSold"/>
+                  <validation validationType="Unique" columns="RegionID|ItemID"/>                  
+                  <validation validationType="LessEqual" columns="CurMinUnitsSold|CurMaxUnitsSold"/>
                 </validations>
               </datasheet>
             </datasheets>
@@ -82,9 +78,9 @@
                   <column name="Iteration" dataType="Integer" isCompositeIndex="True" format="d"/>
                   <column name="Timestep" displayName="Year" dataType="Integer" isCompositeIndex="True" format="d"/>
                   <column name="RegionID" displayName="Region" dataType="Integer" validationType="Datasheet" formula1="Sales_Region" allowDbNull="False"/>
-                  <column name="UnitID" displayName="Unit" dataType="Integer" validationType="Datasheet" formula1="Sales_Unit" allowDbNull="False"/>
+                  <column name="ItemID" displayName="Item" dataType="Integer" validationType="Datasheet" formula1="Sales_Item" allowDbNull="False"/>
                   <column name="UnitsSold" displayName="Units Sold" dataType="Integer"/>
-                  <column name="GrossSales" displayName="Gross Sales" dataType="Double" format="N2"/>
+                  <column name="GrossRevenue" displayName="Gross Revenue" dataType="Double" format="N2"/>
                 </columns>
               </datasheet>
             </datasheets>
@@ -94,11 +90,17 @@
     </transformers>
     <layouts>
       <layout name="system-forms:library-datafeeds">
+        <item name="system:sysfolder-datafeed"/>
+        <item name="system:backup-datafeed"/>
         <item name="system:multiprocessing-datafeed"/>
+        <group name="Options">
+          <item name="system:option-datafeed" displayName="General"/>
+          <item name="system:rconfig-datafeed" displayName="R Configuration"/>
+        </group>
       </layout>
       <layout name="system-forms:project-datafeeds">
         <item name="sample-sales:region"/>
-        <item name="sample-sales:unit"/>       
+        <item name="sample-sales:item"/>       
       </layout>      
       <layout name="system-forms:scenario-datafeeds">
         <item name="sample-sales:run-control"/> 
@@ -108,8 +110,8 @@
         <item name="stime:charts"/>
       </layout>
       <layout name="stime:charts" configurationSheet="Sales_RunControl">
-        <item name="UnitsItem" displayName="Units Sold" dataSheet="Sales_OutputSales" column="UnitsSold" filter="RegionID|UnitID"/>       
-        <item name="SalesItem" displayName="Gross Sales" dataSheet="Sales_OutputSales" column="GrossSales" filter="RegionID|UnitID"/>
+        <item name="UnitsSold" displayName="Units Sold" dataSheet="Sales_OutputSales" column="UnitsSold" filter="RegionID|ItemID"/>       
+        <item name="GrossRevenue" displayName="Gross Revenue" dataSheet="Sales_OutputSales" column="GrossRevenue" filter="RegionID|ItemID"/>
       </layout>
     </layouts>
   </package>
