Simplified package config file for new primary transformer rules.

--- a/src/package.config
+++ b/src/package.config
@@ -2,15 +2,10 @@
 <configuration>
   <package name="sample-sales" displayName="Sample Sales SyncroSim Base Package" version="1.0.0" configVersion="2.0000" url="https://github.com/ApexRMS/sample-sales">
     <transformers>
-      <transformer name="sample-sales" displayName="Sample Sales" isPrimary="True">
-        <runtime>
-          <transformer name="sample-sales:runtime"/>
-        </runtime>
+      <transformer name="sample-sales" displayName="Sample Sales" className="SampleSales.Runtime" classAssembly="SampleSales" configurationSheet="Sales_RunControl" isPrimary="True">
         <include>
           <transformer name="stime:charts"/>
         </include>
-      </transformer>
-      <transformer name="sample-sales:runtime" displayName="Sample Sales" className="SampleSales.Runtime" classAssembly="SampleSales" configurationSheet="Sales_RunControl">
         <datafeeds>
           <datafeed name="sample-sales:region" displayName="Regions" dataScope="Project">
             <datasheets>
