Update sample sales XML for new package config structure.

--- a/src/package.config
+++ b/src/package.config
@@ -2,7 +2,7 @@
 <configuration>
   <package name="sample-sales" displayName="Sample Sales SyncroSim Base Package" version="1.0.0" configVersion="2.0000" url="https://github.com/ApexRMS/sample-sales">
     <transformers>
-      <transformer name="sample-sales" displayName="Sample Sales" className="SampleSales.Runtime" classAssembly="SampleSales" configurationSheet="Sales_RunControl" isPrimary="True">
+      <transformer name="primary" displayName="Sample Sales" className="SampleSales.Runtime" classAssembly="SampleSales" configurationSheet="Sales_RunControl" isPrimary="True">
         <include>
           <transformer name="stime:charts"/>
         </include>
