Update package for new namespace feature.

--- a/src/package.config
+++ b/src/package.config
@@ -2,14 +2,14 @@
 <configuration>
   <package name="sample-sales" displayName="Sample Sales SyncroSim Base Package" version="1.0.0" configVersion="2.0000" url="https://github.com/ApexRMS/sample-sales">
     <transformers>
-      <transformer name="primary" displayName="Sample Sales" className="SampleSales.Runtime" classAssembly="SampleSales" configurationSheet="Sales_RunControl" isPrimary="True">
+      <transformer name="primary" displayName="Sample Sales" className="SampleSales.Runtime" classAssembly="SampleSales" configurationSheet="RunControl" isPrimary="True">
         <include>
-          <transformer name="stime:charts"/>
+          <transformer name="stime__charts"/>
         </include>
         <datafeeds>
-          <datafeed name="sample-sales:region" displayName="Regions" dataScope="Project">
+          <datafeed name="region" displayName="Regions" dataScope="Project">
             <datasheets>
-              <datasheet name="Sales_Region" displayName="Regions" valueMember="RegionID" displayMember="Name">
+              <datasheet name="Region" displayName="Regions" valueMember="RegionID" displayMember="Name">
                 <columns>
                   <column name="RegionID" dataType="Integer" isPrimary="True"/>
                   <column name="ProjectID" dataType="Integer"/>
@@ -19,9 +19,9 @@
               </datasheet>
             </datasheets>
           </datafeed>
-          <datafeed name="sample-sales:item" displayName="Items" dataScope="Project">
+          <datafeed name="item" displayName="Items" dataScope="Project">
             <datasheets>
-              <datasheet name="Sales_Item" displayName="Items" valueMember="ItemID" displayMember="Name">
+              <datasheet name="Item" displayName="Items" valueMember="ItemID" displayMember="Name">
                 <columns>
                   <column name="ItemID" dataType="Integer" isPrimary="True"/>
                   <column name="ProjectID" dataType="Integer"/>
@@ -31,9 +31,9 @@
               </datasheet>
             </datasheets>
           </datafeed>          
-          <datafeed name="sample-sales:run-control" displayName="Forecast Settings" dataScope="Scenario">
+          <datafeed name="run-control" displayName="Forecast Settings" dataScope="Scenario">
             <datasheets>
-              <datasheet name="Sales_RunControl" displayName="Run Control" isSingleRow="True">
+              <datasheet name="RunControl" displayName="Run Control" isSingleRow="True">
                 <columns>
                   <column name="RunControlID" dataType="Integer" isPrimary="True"/>
                   <column name="ScenarioID" dataType="Integer"/>
@@ -45,14 +45,14 @@
               </datasheet>
             </datasheets>
           </datafeed>
-          <datafeed name="sample-sales:input-sales" displayName="Annual Sales" dataScope="Scenario">
+          <datafeed name="input-sales" displayName="Annual Sales" dataScope="Scenario">
             <datasheets>
-              <datasheet name="Sales_InputSales" displayName="Annual Sales">
+              <datasheet name="InputSales" displayName="Annual Sales">
                 <columns>
                   <column name="AnnualSalesID" dataType="Integer" isPrimary="True"/>
                   <column name="ScenarioID" dataType="Integer"/>
-                  <column name="RegionID" displayName="Region" dataType="Integer" validationType="Datasheet" formula1="Sales_Region" allowDbNull="False"/>
-                  <column name="ItemID" displayName="Item" dataType="Integer" validationType="Datasheet" formula1="Sales_Item" allowDbNull="False"/>
+                  <column name="RegionID" displayName="Region" dataType="Integer" validationType="Datasheet" formula1="Region" allowDbNull="False"/>
+                  <column name="ItemID" displayName="Item" dataType="Integer" validationType="Datasheet" formula1="Item" allowDbNull="False"/>
                   <column name="ItemPrice" displayName="Price" dataType="Double" validationType="Decimal" validationCondition="GreaterEqual" formula1="0" allowDbNull="False" format="C2"/>
                   <column name="CurMinUnitsSold" displayName="Current Min Units Sold" dataType="Integer" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="0" format="d" allowDbNull="False"/>
                   <column name="CurMaxUnitsSold" displayName="Current Max Units Sold" dataType="Integer" validationType="WholeNumber" validationCondition="GreaterEqual" formula1="0" format="d" allowDbNull="False"/>
@@ -65,15 +65,15 @@
               </datasheet>
             </datasheets>
           </datafeed>
-          <datafeed name="sample-sales:output-sales" displayName="Output Sales" dataScope="Scenario" isOutput="True">
+          <datafeed name="output-sales" displayName="Output Sales" dataScope="Scenario" isOutput="True">
             <datasheets>
-              <datasheet name="Sales_OutputSales" displayName="Output Sales">
+              <datasheet name="OutputSales" displayName="Output Sales">
                 <columns>
                   <column name="ScenarioID" dataType="Integer" isCompositeIndex="True"/>
                   <column name="Iteration" dataType="Integer" isCompositeIndex="True" format="d"/>
                   <column name="Timestep" displayName="Year" dataType="Integer" isCompositeIndex="True" format="d"/>
-                  <column name="RegionID" displayName="Region" dataType="Integer" validationType="Datasheet" formula1="Sales_Region" allowDbNull="False"/>
-                  <column name="ItemID" displayName="Item" dataType="Integer" validationType="Datasheet" formula1="Sales_Item" allowDbNull="False"/>
+                  <column name="RegionID" displayName="Region" dataType="Integer" validationType="Datasheet" formula1="Region" allowDbNull="False"/>
+                  <column name="ItemID" displayName="Item" dataType="Integer" validationType="Datasheet" formula1="Item" allowDbNull="False"/>
                   <column name="UnitsSold" displayName="Units Sold" dataType="Integer"/>
                   <column name="GrossRevenue" displayName="Gross Revenue" dataType="Double" format="N2"/>
                 </columns>
@@ -84,29 +84,29 @@
       </transformer>
     </transformers>
     <layouts>
-      <layout name="system-forms:library-datafeeds">
-        <item name="system:sysfolder-datafeed"/>
-        <item name="system:backup-datafeed"/>
-        <item name="system:multiprocessing-datafeed"/>
+      <layout name="system_forms__library-datafeeds">
+        <item name="system__sysfolder"/>
+        <item name="system__backup"/>
+        <item name="system__multiprocessing"/>
         <group name="Options">
-          <item name="system:option-datafeed" displayName="General"/>
-          <item name="system:rconfig-datafeed" displayName="R Configuration"/>
+          <item name="system__option" displayName="General"/>
+          <item name="system__rconfig" displayName="R Configuration"/>
         </group>
       </layout>
-      <layout name="system-forms:project-datafeeds">
-        <item name="sample-sales:region"/>
-        <item name="sample-sales:item"/>       
+      <layout name="system_forms__project-datafeeds">
+        <item name="region"/>
+        <item name="item"/>       
       </layout>      
-      <layout name="system-forms:scenario-datafeeds">
-        <item name="sample-sales:run-control"/> 
-        <item name="sample-sales:input-sales"/>        
+      <layout name="system_forms__scenario-datafeeds">
+        <item name="run-control"/> 
+        <item name="input-sales"/>        
       </layout>
-      <layout name="system-forms:result-transformers">
-        <item name="stime:charts"/>
+      <layout name="system_forms__result-transformers">
+        <item name="stime__charts"/>
       </layout>
-      <layout name="stime:charts" configurationSheet="Sales_RunControl">
-        <item name="UnitsSold" displayName="Units Sold" dataSheet="Sales_OutputSales" column="UnitsSold" filter="RegionID|ItemID"/>       
-        <item name="GrossRevenue" displayName="Gross Revenue" dataSheet="Sales_OutputSales" column="GrossRevenue" filter="RegionID|ItemID"/>
+      <layout name="stime__charts" configurationSheet="RunControl">
+        <item name="UnitsSold" displayName="Units Sold" dataSheet="OutputSales" column="UnitsSold" filter="RegionID|ItemID"/>       
+        <item name="GrossRevenue" displayName="Gross Revenue" dataSheet="OutputSales" column="GrossRevenue" filter="RegionID|ItemID"/>
       </layout>
     </layouts>
   </package>
