--- a/src/package.config
+++ b/src/package.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <package name="sample-sales" displayName="Sample Sales SyncroSim Base Package" version="1.0.0" configVersion="2.0000" url="https://github.com/ApexRMS/sample-sales">
+  <package name="demosales" displayName="Demo Sales SyncroSim Base Package" version="1.0.0" configVersion="2.0000" url="https://github.com/ApexRMS/demosales">
     <transformers>
-      <transformer name="primary" displayName="Sample Sales" className="SampleSales.Runtime" classAssembly="SampleSales" configurationSheet="RunControl" isPrimary="True">
+      <transformer name="Primary" displayName="Demo Sales" className="DemoSales.Primary" classAssembly="DemoSales" configurationSheet="RunControl" isPrimary="True">
         <include>
-          <transformer name="stime__charts"/>
+          <transformer name="corestime_Runtime"/>
         </include>
         <datafeeds>
-          <datafeed name="region" displayName="Regions" dataScope="Project">
+          <datafeed name="Region" displayName="Regions" dataScope="Project">
             <datasheets>
               <datasheet name="Region" displayName="Regions" valueMember="RegionID" displayMember="Name">
                 <columns>
@@ -19,7 +19,7 @@
               </datasheet>
             </datasheets>
           </datafeed>
-          <datafeed name="item" displayName="Items" dataScope="Project">
+          <datafeed name="Item" displayName="Items" dataScope="Project">
             <datasheets>
               <datasheet name="Item" displayName="Items" valueMember="ItemID" displayMember="Name">
                 <columns>
@@ -31,7 +31,7 @@
               </datasheet>
             </datasheets>
           </datafeed>          
-          <datafeed name="run-control" displayName="Forecast Settings" dataScope="Scenario">
+          <datafeed name="RunControl" displayName="Forecast Settings" dataScope="Scenario">
             <datasheets>
               <datasheet name="RunControl" displayName="Run Control" isSingleRow="True">
                 <columns>
@@ -45,9 +45,9 @@
               </datasheet>
             </datasheets>
           </datafeed>
-          <datafeed name="input-sales" displayName="Annual Sales" dataScope="Scenario">
+          <datafeed name="AnnualSales" displayName="Annual Sales" dataScope="Scenario">
             <datasheets>
-              <datasheet name="InputSales" displayName="Annual Sales">
+              <datasheet name="AnnualSales" displayName="Annual Sales">
                 <columns>
                   <column name="AnnualSalesID" dataType="Integer" isPrimary="True"/>
                   <column name="ScenarioID" dataType="Integer"/>
@@ -65,7 +65,7 @@
               </datasheet>
             </datasheets>
           </datafeed>
-          <datafeed name="output-sales" displayName="Output Sales" dataScope="Scenario" isOutput="True">
+          <datafeed name="OutputSales" displayName="Output Sales" dataScope="Scenario" isOutput="True">
             <datasheets>
               <datasheet name="OutputSales" displayName="Output Sales">
                 <columns>
@@ -84,27 +84,27 @@
       </transformer>
     </transformers>
     <layouts>
-      <layout name="system_forms__library-datafeeds">
-        <item name="system__sysfolder"/>
-        <item name="system__backup"/>
-        <item name="system__multiprocessing"/>
+      <layout name="coreforms_LibraryDatafeeds">
+        <item name="core_SysFolder"/>
+        <item name="core_Backup"/>
+        <item name="core_Multiprocessing"/>
         <group name="Options">
-          <item name="system__option" displayName="General"/>
-          <item name="system__rconfig" displayName="R Configuration"/>
+          <item name="core_Options" displayName="General"/>
+          <item name="core_Rconfig"/>
         </group>
       </layout>
-      <layout name="system_forms__project-datafeeds">
-        <item name="region"/>
-        <item name="item"/>       
+      <layout name="coreforms_ProjectDatafeeds">
+        <item name="Region"/>
+        <item name="Item"/>       
       </layout>      
-      <layout name="system_forms__scenario-datafeeds">
-        <item name="run-control"/> 
-        <item name="input-sales"/>        
+      <layout name="coreforms_ScenarioDatafeeds">
+        <item name="RunControl"/> 
+        <item name="AnnualSales"/>        
       </layout>
-      <layout name="system_forms__result-transformers">
-        <item name="stime__charts"/>
+      <layout name="coreforms_ResultTransformers">
+        <item name="corestime_ChartTransformer"/>
       </layout>
-      <layout name="stime__charts" configurationSheet="RunControl">
+      <layout name="corestimeforms_Charts" configurationSheet="RunControl">
         <item name="UnitsSold" displayName="Units Sold" dataSheet="OutputSales" column="UnitsSold" filter="RegionID|ItemID"/>       
         <item name="GrossRevenue" displayName="Gross Revenue" dataSheet="OutputSales" column="GrossRevenue" filter="RegionID|ItemID"/>
       </layout>
